Creating script.js and adding some functions

--- a/Aula03/index.html
+++ b/Aula03/index.html
@@ -125,17 +125,8 @@
         <p>2021 - dev.finance$</p>
     </footer>
 
-    <script>
-        const Modal = {
-            open() {
-                //Abri modal
-                document.querySelector('.modal-overlay').classList.add('active');
-            },
-            close() {
-                //Fechar modal
-                document.querySelector('.modal-overlay').classList.remove('active');
-            }
-        }
+    <script src="./scripts.js">
+        
     </script>
 
 </body>
