feature: social medias icon at footer

--- a/currentVersion/index.html
+++ b/currentVersion/index.html
@@ -118,6 +118,13 @@
     </div>
 
     <footer class="">
+        <div id="social-medias">
+            <div id="social-icons">
+                <a href="https://github.com/GuilhermeGonzalez" target="_blank"><img src="../assets/github.svg" alt="github link" class="icons" ></a>
+                <a href="https://www.instagram.com/guih_cg/" target="_blank"><img src="../assets/instagram.svg" alt="instagram link" class="icons" ></a>
+                <a href="https://www.linkedin.com/in/guilherme-c-gonzalez-342bb4158/" target="_blank"><img src="../assets/linkedin.svg" alt="linkedin link" class="icons" ></a>
+            </div>
+        </div>
         <p>2021 - dev.finance$</p>
     </footer>
 
