--- a/Aulas/Aula02 - withoutJSVersion/index.html
+++ b/Aulas/Aula02 - withoutJSVersion/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="../assets/logo.svg" alt="logo dev finance">
+        <img src="../../assets/logo.svg" alt="logo dev finance">
     </header>
 
     <main class ="container">
@@ -26,21 +26,21 @@
             <div class="card">
                 <h3>
                     <span>Entradas</span>
-                    <img src="../assets/income.svg" alt="Image de entradas">
+                    <img src="../../assets/income.svg" alt="Image de entradas">
                 </h3>
                 <p>R$ 5.000,00</p>
             </div>
             <div class="card">
                 <h3>
                     <span>Saídas</span>
-                    <img src="../assets/expense.svg" alt="Image de saidas">
+                    <img src="../../assets/expense.svg" alt="Image de saidas">
                 </h3>
                 <p>R$ 2.000,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
-                    <img src="../assets/total.svg" alt="Image de total">
+                    <img src="../../assets/total.svg" alt="Image de total">
                 </h3>
                 <p>R$ 3.000,00</p>
             </div>
@@ -65,7 +65,7 @@
                         <td class="expense">- R$ 500,00</td>
                         <td clas="date">23/01/2021</td>
                         <td>
-                            <img src="../assets/minus.svg" alt="Remover transação">
+                            <img src="../../assets/minus.svg" alt="Remover transação">
                         </td>
                     </tr>
                     <tr>
@@ -73,7 +73,7 @@
                         <td class="income">R$ 5000,00</td>
                         <td clas="date">23/01/2021</td>
                         <td>
-                            <img src="../assets/minus.svg" alt="Remover transação">
+                            <img src="../../assets/minus.svg" alt="Remover transação">
                         </td>
                     </tr>
                     <tr>
@@ -81,7 +81,7 @@
                         <td class="expense">- R$ 200,00</td>
                         <td clas="date">23/01/2021</td>
                         <td>
-                            <img src="../assets/minus.svg" alt="Remover transação">
+                            <img src="../../assets/minus.svg" alt="Remover transação">
                         </td>
                     </tr>
                 </tbody>
