--- a/Aulas/Aula03 - finalVersion 1.0/index.html
+++ b/Aulas/Aula03 - finalVersion 1.0/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="../../assets/logo.svg" alt="logo dev finance">
+        <img src="../assets/logo.svg" alt="logo dev finance">
     </header>
 
     <main class ="container">
@@ -26,21 +26,21 @@
             <div class="card">
                 <h3>
                     <span>Entradas</span>
-                    <img src="../../assets/income.svg" alt="Image de entradas">
+                    <img src="../assets/income.svg" alt="Image de entradas">
                 </h3>
                 <p id="incomeDisplay">R$ 0,00</p>
             </div>
             <div class="card">
                 <h3>
                     <span>Saídas</span>
-                    <img src="../../assets/expense.svg" alt="Image de saidas">
+                    <img src="../assets/expense.svg" alt="Image de saidas">
                 </h3>
                 <p id="expenseDisplay">R$ 0,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
-                    <img src="../../assets/total.svg" alt="Image de total">
+                    <img src="../assets/total.svg" alt="Image de total">
                 </h3>
                 <p id="totalDisplay">R$ 0,00</p>
             </div>
