--- a/currentVersion/index.html
+++ b/currentVersion/index.html
@@ -12,12 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
     
     
-    <link rel="shortcut icon" type="image/jpg" href="../assets/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="./assets/favicon.png"/>
 </head>
 
 <body>
     <header>
-        <img src="../assets/logo.svg" alt="logo dev finance">
+        <img src="./assets/logo.svg" alt="logo dev finance">
         <div id="switch-container">
             <div class="theme-switch-wrapper">
                 <label class="theme-switch" for="checkbox">
@@ -36,21 +36,21 @@
             <div id="income-card" class="card">
                 <h3>
                     <span>Entradas</span>
-                    <img src="../assets/income.svg" alt="Image de entradas">
+                    <img src="./assets/income.svg" alt="Image de entradas">
                 </h3>
                 <p id="incomeDisplay">R$ 0,00</p>
             </div>
             <div id="expense-card" class="card">
                 <h3>
                     <span>Saídas</span>
-                    <img src="../assets/expense.svg" alt="Image de saidas">
+                    <img src="./assets/expense.svg" alt="Image de saidas">
                 </h3>
                 <p id="expenseDisplay">R$ 0,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
-                    <img src="../assets/total.svg" alt="Image de total">
+                    <img src="./assets/total.svg" alt="Image de total">
                 </h3>
                 <p id="totalDisplay">R$ 0,00</p>
             </div>
@@ -110,7 +110,7 @@
     <div class="modal-error ">
         <div class="modal">
                 <div id="img-box">
-                    <img src="../assets/warning.png">
+                    <img src="./assets/warning.png">
                 </div>
                 <p id="message-error">Por favor, preencha todos os campos.</p>
                 <button onclick="Modal.toggleError()" type="button" id="error-button">Confirmar</button>
@@ -120,9 +120,9 @@
     <footer class="">
         <div id="social-medias">
             <div id="social-icons">
-                <a href="https://github.com/GuilhermeGonzalez" target="_blank"><img src="../assets/github.svg" alt="github link" class="icons" ></a>
-                <a href="https://www.instagram.com/guih_cg/" target="_blank"><img src="../assets/instagram.svg" alt="instagram link" class="icons" ></a>
-                <a href="https://www.linkedin.com/in/guilherme-c-gonzalez-342bb4158/" target="_blank"><img src="../assets/linkedin.svg" alt="linkedin link" class="icons" ></a>
+                <a href="https://github.com/GuilhermeGonzalez" target="_blank"><img src="./assets/github.svg" alt="github link" class="icons" ></a>
+                <a href="https://www.instagram.com/guih_cg/" target="_blank"><img src="./assets/instagram.svg" alt="instagram link" class="icons" ></a>
+                <a href="https://www.linkedin.com/in/guilherme-c-gonzalez-342bb4158/" target="_blank"><img src="./assets/linkedin.svg" alt="linkedin link" class="icons" ></a>
             </div>
         </div>
         <p>2021 - dev.finance$</p>
